--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ More than 50% of all fatalities involved people aged 80 years or older. Reports 
 
 <h2><p style="color:red;">do i have to wear mask after vaccination?</p></h2>
 <h2><p style="color:blue;">But vaccinated people may still carry enough virus in the nose to infect others. So if a vaccinated person breathes or sneezes they could still infect someone else, even if they feel fine. This means vaccinated people still have to wear masks and socially distance, even if their individual risk is much lower </p></h2>
-<p style ="color:green;"> for more information click this link <a href="https://en.wikipedia.org/wiki/COVID-19">https://en.wikipedia.org/wiki/COVID-19 </a> or CONTACT US at <a href="9937493901">9937493901 </a></p>
+<p style ="color:green;"> for more information click this link <a href="https://en.wikipedia.org/wiki/COVID-19">https://en.wikipedia.org/wiki/COVID-19 </a> or CONTACT US at <a href="mailto:tejaslohani@gmail.com">tejaslohani@gmail.com</a></p>
               <h2>  <p style="color:red;"> liked our project? you can write a review about your experience down below , you can also check our other project by clicking on this link <a href="https://periodictablecom.netlify.app/">https://periodictablecom.netlify.app//</a></p></h2>
 
             <p style = "color:red"> enter your name </p>   <input type="enter your name" name="" value="">
